# GraphHunter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  package-lock.json
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ai.rs  http_api.rs  lib.rs
app/src/components/: ActivityLogLeftPanel.tsx  DatasetsLeftPanel.tsx  EventsViewPanel.tsx  ExplorerPanel.tsx  FieldSelector.tsx  GraphCanvas.tsx  GraphMetricsLeftPanel.tsx  HeatmapView.tsx  HelpPanel.tsx  HuntResultsTable.tsx  HypothesisBuilder.tsx  IngestPanel.tsx  NodeContextMenu.tsx  NodeDetailPanel.tsx  NotesPanel.tsx  PathNodesPanel.tsx  SessionSelector.tsx  TimelineView.tsx  WelcomePage.tsx
app/src/lib/: ingestService.ts  runtime.ts  tauri.ts  webIngest.ts
demo_data/: DOWNLOAD_REAL_DATA.md  generic_csv_logs.csv
docs/: .readthedocs.yaml  DOLOST_DOCS_ANALYSIS_AND_PROPOSAL.md  GNN_STRATEGY.md  Makefile  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/getting-started/: demo-data.rst  first-hunt.rst  index.rst  installation.rst  usage.rst
docs/images/: README.md
docs/reference/: architecture.rst  index.rst  mcp.rst  privacy.rst
docs/user-guide/: gnn-threat-scoring.rst  hypothesis-and-catalog.rst  index.rst  log-formats.rst  siem-ingest.rst
gateway/: go.mod  go.sum  main.go
gateway/cmd/: server.go
gateway/internal/engine/: rust.go  (+1 more)
graph-hunter-mcp/: README.md  package-lock.json  package.json
graph-hunter-mcp/src/: index.ts
graph_hunter_cli/: Cargo.toml
graph_hunter_cli/src/: commands.rs  lib.rs  main.rs  protocol.rs
graph_hunter_cli/src/siem/: elastic.rs  mod.rs  sentinel.rs
graph_hunter_core/: Cargo.toml
graph_hunter_core/src/: analytics.rs  anomaly.rs  benchmark.rs  catalog.rs  csv_parser.rs  dsl.rs  entity.rs  field_preview.rs  generic.rs  gnn_bridge.rs  graph.rs  hypothesis.rs  interner.rs  lib.rs  npu_scorer.rs  preview.rs  relation.rs  sentinel.rs  sysmon.rs  types.rs
training/: .gitignore  01_parse_darpa_cdm.py  02_extract_subgraphs.py  03_train_model.py  04_validate_onnx.py  Graph_Hunter_GNN_Training.ipynb  README.md  requirements.txt
(+6 files in other folders)
