[package]
name = "graph_hunter_cli"
version = "1.0.0"
edition = "2024"
description = "Long-running CLI process for Graph Hunter — stdin/stdout JSON protocol"

[lib]
name = "graph_hunter_cli"
path = "src/lib.rs"

[[bin]]
name = "graph_hunter_cli"
path = "src/main.rs"

[dependencies]
graph_hunter_core = { path = "../graph_hunter_core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
