[package]
name = "graph_hunter_core"
version = "1.0.0"
edition = "2024"
description = "Graph-based threat hunting engine: temporal knowledge graphs and hypothesis-driven path search"
license = "GPL-3.0"

[features]
default = []
ml-scoring = ["ort", "ndarray"]
directml = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
ahash = "0.8"
ordered-float = "4"
ort = { version = "2.0.0-rc.11", optional = true }
ndarray = { version = "0.17", optional = true }
