[package]
name = "graph-hunter-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "graph_hunter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
memmap2 = "0.9"
graph_hunter_core = { path = "../../graph_hunter_core", features = ["ml-scoring"] }
graph_hunter_cli = { path = "../../graph_hunter_cli" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
evtx = { version = "0.11", default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
